# rust-proxy

./: CHANGELOG.MD  Cargo.toml  README.MD  rustfmt.toml  todo.md
.github/workflows/: main.yml
src/: error.rs  hyper_client_host.rs  lib.rs  main.rs  proxy.rs  result.rs  test_utils.rs  upstream.rs
src/logging/: console_logger.rs  file_logger.rs  mod.rs
src/proxy/: builder.rs  caching.rs  hyper_client_host.rs  layers.rs  log_service.rs  logger.rs  logging.rs  mod.rs  redirect_util.rs  remote_host.rs
src/test_utils/: mod.rs
src/upstream/: mod.rs
tests/: acceptance.rs
tests/utils/: mod.rs
