[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2021"
description = ""
repository = ""
readme = "README.MD"
license = "MIT OR Apache-2.0"
keywords = []

[[bin]]
name = "rust-proxy"
path = "src/main.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
anyhow = "1.0.98"
tower-http = { version = "0.6.2", features = [
    "trace",
    # "set-header",
    "add-extension",
] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
bytes = "1.10.1"

[dev-dependencies]
httpmock = "0.7.0"
tempfile = "3.19.1"
