[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2021"
description = ""
repository = ""
readme = "README.MD"
license = "MIT OR Apache-2.0"
keywords = []

[[bin]]
name = "rust-proxy"
path = "src/main.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = [
    "trace",
    # "set-header",
    "add-extension",
] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
bytes = "1.10.1"
http = "1.3.1"
thiserror = "2.0.12"
async-trait = "0.1.88"

[dev-dependencies]
http-body-util = "0.1"
httpmock = "0.7.0"
tempfile = "3.19.1"
